@@ -254,6 +254,8 @@ class OptionParser(optparse.OptionParser):
         optgrp.add_option("-S", "--separator", action="store", dest="separator",
                           default=' ', help="separator string to use when " \
                           "expanding nodesets (default: ' ')")
+        optgrp.add_option("-I", "--slice", action="store", dest="slice_rangeset", 
+                          help="return sliced off result", type="string")
         optgrp.add_option("--split", action="store", dest="maxsplit", 
                           help="split result into a number of subsets",
                           type="int", default=1)
