@@ -1,5 +1,8 @@
 2011-03-06 S. Thiell <stephane.thiell@cea.fr>
 
+	* CLI/Nodeset.py: Added -I/--slice command option to select node(s) by
+	index(es) or RangeSet-style slice (ticket #140).
+
 	* CLI/Nodeset.py: Remove pending limitation when using -[ixX] operations
 	with nodesets specified by -a (all) or through stdin.
 
